--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,7 @@
 __pycache__/
 *.pyc
 
-# Virtual environments
-venv/
-.env
 
-# Jupyter
-.ipynb_checkpoints/
 
 # Models and logs
 models/
@@ -16,3 +11,11 @@ mlruns/
 
 # OS
 .DS_Store
+
+# Common virtual env folders
+venv/
+.ipynb_checkpoints/
+__pycache__/
+.DS_Store
+.env
+
